waves fix align bottom

--- a/src/Pages/login1/login1.scss
+++ b/src/Pages/login1/login1.scss
@@ -7,7 +7,7 @@
 
 .logincontainer {
     display: flex;
-    min-height: 86vh;
+    min-height: 90vh;
     align-items: center;
     justify-content: center;
 }
@@ -114,7 +114,7 @@
     .waves {
         width: 100%;
         background-color: inherit;
-        margin-bottom: -0.43rem;
+        margin-bottom: -0.4375rem;
         max-height: 111px;
     }
     .parallax > use {
